kubeadm/test-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: development
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: python:3.12.4-alpine
          command: ["python3", "-m", "http.server", "80"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
