kubeadm/test-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: development
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "frontend.example.local"
  rules:
    # Хост определяет правило направления траффика по доменному имени
    - host: "frontend.example.local"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Заранее создан сервис типа ClusterIP
                # Он выступает в качестве бэкенда нашего Ingress
                name: frontend
                port:
                  # У сервиса может быть несколько портов, указываем нужный нам
                  number: 80
